[gd_scene load_steps=58 format=2]

[ext_resource path="res://objects/battle/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://custom_classes/DialogueLabel.gd" type="Script" id=2]
[ext_resource path="res://locations/battle/dialogue_box.gd" type="Script" id=3]
[ext_resource path="res://locations/testing/attacks_test.gd" type="Script" id=4]
[ext_resource path="res://sprites/battle/meist_body.png" type="Texture" id=5]
[ext_resource path="res://sprites/battle/meist_head.png" type="Texture" id=6]
[ext_resource path="res://sprites/battle/meist_face.png" type="Texture" id=7]
[ext_resource path="res://sprites/battle/sword_down.png" type="Texture" id=8]
[ext_resource path="res://locations/battle/enemy.gd" type="Script" id=9]
[ext_resource path="res://fonts/hachicro.TTF" type="DynamicFontData" id=10]
[ext_resource path="res://sprites/battle/fire_storm.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 139, 147 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 11 )
region = Rect2( 139, 0, 139, 147 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 11 )
region = Rect2( 278, 0, 139, 147 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 11 )
region = Rect2( 417, 0, 139, 147 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 11 )
region = Rect2( 0, 147, 139, 147 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 11 )
region = Rect2( 139, 147, 139, 147 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 11 )
region = Rect2( 278, 147, 139, 147 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 11 )
region = Rect2( 417, 147, 139, 147 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 8 )
region = Rect2( 158, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 8 )
region = Rect2( 316, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 8 )
region = Rect2( 474, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 8 )
region = Rect2( 632, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 8 )
region = Rect2( 790, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 8 )
region = Rect2( 948, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 8 )
region = Rect2( 1106, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 8 )
region = Rect2( 1264, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 8 )
region = Rect2( 1422, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 8 )
region = Rect2( 1580, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 8 )
region = Rect2( 1738, 0, 158, 152 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 8 )
region = Rect2( 0, 152, 158, 152 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 8 )
region = Rect2( 158, 152, 158, 152 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 8 )
region = Rect2( 316, 152, 158, 152 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 8 )
region = Rect2( 474, 152, 158, 152 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 8 )
region = Rect2( 632, 152, 158, 152 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 8 )
region = Rect2( 790, 152, 158, 152 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 8 )
region = Rect2( 948, 152, 158, 152 )

[sub_resource type="SpriteFrames" id=117]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": false,
"name": "fire_storm",
"speed": 10.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ) ],
"loop": false,
"name": "sword_down_start",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=118]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 57, 53 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 57, 0, 57, 53 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 114, 0, 57, 53 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 171, 0, 57, 53 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 228, 0, 57, 53 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 285, 0, 57, 53 )

[sub_resource type="SpriteFrames" id=119]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Gradient" id=96]
colors = PoolColorArray( 0.5, 0.5, 0.5, 1, 0.5, 0.5, 0.5, 1 )

[sub_resource type="GradientTexture" id=120]
gradient = SubResource( 96 )
width = 1

[sub_resource type="Gradient" id=97]
colors = PoolColorArray( 1, 0, 0, 1, 0.125, 1, 0, 1 )

[sub_resource type="GradientTexture" id=121]
gradient = SubResource( 97 )
width = 128

[sub_resource type="Animation" id=122]
resource_name = "simple_anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -100, 30 ), Vector2( -100, -20 ), Vector2( -100, -20 ), Vector2( -100, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=123]
outline_size = 2
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=124]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("head:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("head/face:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("head/head:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("head/head:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -19, -64 ) ]
}

[sub_resource type="Animation" id=125]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("head:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=126]
resource_name = "fire_storm"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fire_storm" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "toggle_default_animation"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("head/face:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("head/head:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("head/head:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -18, -65 ), Vector2( -18, -70 ) ]
}

[sub_resource type="Animation" id=127]
resource_name = "sword_down"
tracks/0/type = "value"
tracks/0/path = NodePath("head:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="attacks_test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copy_settings" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -97.0
margin_bottom = 20.0
grow_horizontal = 0
text = "copy settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gui" type="Node2D" parent="."]

[node name="dialogue_box" type="Control" parent="gui"]
margin_left = 230.0
margin_top = 267.0
margin_right = 442.0
margin_bottom = 347.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="gui/dialogue_box"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 1, 1, 1, 1 )
border_width = 5.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue" type="RichTextLabel" parent="gui/dialogue_box/ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
scroll_following = true
script = ExtResource( 2 )
messages = [ "INTRO_LOG1", "INTRO_LOG2", "INTRO_LOG3", "INTRO_LOG4", "INTRO_LOG5", "INTRO_LOG6" ]

[node name="Tween" type="Tween" parent="gui/dialogue_box"]

[node name="player" parent="gui" instance=ExtResource( 1 )]
position = Vector2( 327, 308 )

[node name="enemy" type="AnimatedSprite" parent="gui"]
position = Vector2( 339, 140 )
script = ExtResource( 9 )

[node name="body" type="AnimatedSprite" parent="gui/enemy"]
frames = SubResource( 117 )
playing = true

[node name="head" type="Node2D" parent="gui/enemy"]
position = Vector2( -1, 0 )

[node name="face" type="AnimatedSprite" parent="gui/enemy/head"]
frames = SubResource( 118 )
offset = Vector2( -15, -47 )

[node name="head" type="AnimatedSprite" parent="gui/enemy/head"]
frames = SubResource( 119 )
frame = 1
playing = true
offset = Vector2( -19, -64 )

[node name="hp_bar" type="TextureProgress" parent="gui/enemy"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -100.0
margin_top = 30.0
margin_right = 100.0
margin_bottom = 50.0
max_value = 10000.0
value = 10000.0
texture_under = SubResource( 120 )
texture_progress = SubResource( 121 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="gui/enemy/hp_bar"]
anims/simple_anim = SubResource( 122 )

[node name="Label" type="Label" parent="gui/enemy/hp_bar"]
anchor_right = 1.0
grow_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 123 )
text = "2000"
align = 1

[node name="smooth" type="Tween" parent="gui/enemy/hp_bar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="gui/enemy"]
anims/RESET = SubResource( 124 )
anims/default = SubResource( 125 )
anims/fire_storm = SubResource( 126 )
anims/sword_down = SubResource( 127 )

[node name="general" type="GridContainer" parent="."]
margin_left = 3.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="general"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
text = "attack_id"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="id" type="SpinBox" parent="general"]
margin_left = 104.0
margin_right = 166.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="general"]
margin_left = 170.0
margin_right = 218.0
margin_bottom = 26.0
disabled = true
text = "spawn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="general"]
margin_top = 32.0
margin_right = 100.0
margin_bottom = 48.0
text = "box_position"

[node name="pos_x" type="TextEdit" parent="general"]
margin_left = 104.0
margin_top = 30.0
margin_right = 166.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos_y" type="TextEdit" parent="general"]
margin_left = 170.0
margin_top = 30.0
margin_right = 218.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="general"]
margin_top = 56.0
margin_right = 100.0
margin_bottom = 72.0
text = "box_size"

[node name="size_x" type="TextEdit" parent="general"]
margin_left = 104.0
margin_top = 54.0
margin_right = 166.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 20 )
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="size_y" type="TextEdit" parent="general"]
margin_left = 170.0
margin_top = 54.0
margin_right = 218.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 20 )
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_gui" type="ScrollContainer" parent="."]
anchor_right = 0.4
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 75.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="GridContainer" parent="attack_gui"]
custom_constants/vseparation = 5
columns = 2

[connection signal="pressed" from="copy_settings" to="." method="_on_copy_settings_pressed"]
[connection signal="dialogue_ended" from="gui/dialogue_box/ReferenceRect/dialogue" to="gui" method="_on_dialogue_dialogue_ended"]
[connection signal="dialogue_ended" from="gui/dialogue_box/ReferenceRect/dialogue" to="gui/dialogue_box" method="_on_dialogue_dialogue_ended"]
[connection signal="value_changed" from="general/id" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="general/Button" to="." method="_on_Button_pressed"]
